--- a/index.html
+++ b/index.html
@@ -2,192 +2,215 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<title>Panel Admin</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🎮 Panel Admin</title>
-
-<!-- 🔥 Firebase v9 COMPAT (UNO SOLO) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <style>
+*{box-sizing:border-box}
 body{
   margin:0;
-  background:#06010d;
+  background:#080411;
   font-family:Arial,Helvetica,sans-serif;
   color:#fff;
 }
-h2{margin:0 0 12px;color:#c58bff}
-
-.container{
+.top{
   display:flex;
-  gap:20px;
-  padding:20px;
-  max-width:1100px;
-  margin:auto;
+  justify-content:center;
+  gap:14px;
+  padding:14px;
 }
-.card{
-  flex:1;
-  background:#0c0718;
-  border-radius:22px;
-  padding:20px;
-  box-shadow:0 0 40px #7f4cff;
-}
-input,select,textarea{
-  width:100%;
-  padding:12px;
-  border-radius:12px;
-  border:none;
-  background:#120c22;
-  color:#fff;
-  margin-top:8px;
-}
-textarea{min-height:120px}
-button{
-  margin-top:12px;
-  padding:12px;
-  width:100%;
+.top button{
+  padding:12px 20px;
   border:none;
   border-radius:14px;
-  background:linear-gradient(135deg,#8a5cff,#c58bff);
+  background:#6f3cff;
+  color:#000;
   font-weight:bold;
 }
+.page{
+  display:none;
+  max-width:460px;
+  margin:20px auto;
+  background:#120a24;
+  border-radius:22px;
+  padding:20px;
+  box-shadow:0 0 40px #7a3cff;
+}
+.page.active{display:block}
+h2{
+  text-align:center;
+  color:#b57cff;
+}
 .user{
-  background:#120c22;
+  background:#1b0f38;
   padding:12px;
   border-radius:14px;
-  margin-top:10px;
+  margin:10px 0;
 }
-.actions{display:flex;gap:6px;margin-top:6px}
-.actions input{flex:1;text-align:center}
-.plus{background:#00ffcc;color:#000}
-.minus{background:#ff5b5b;color:#fff}
-.msg{margin-top:8px;text-align:center}
+select,textarea,input,button{
+  width:100%;
+  margin-top:10px;
+  padding:14px;
+  border:none;
+  border-radius:14px;
+  background:#1b0f38;
+  color:#fff;
+}
+textarea{min-height:140px}
+.btn{
+  background:linear-gradient(135deg,#8a5cff,#c58bff);
+  color:#000;
+  font-weight:bold;
+}
+.msg{text-align:center;margin-top:10px}
 .ok{color:#5bff9a}
-.error{color:#ff5b5b}
-.hidden{display:none}
+.err{color:#ff5b5b}
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<!-- 🔝 MENU -->
+<div class="top">
+  <button onclick="show('saldos')">💰 SALDOS</button>
+  <button onclick="show('keys')">🔑 KEYS</button>
+</div>
 
 <!-- 💰 SALDOS -->
-<div class="card">
+<div id="saldos" class="page active">
   <h2>💰 SALDOS</h2>
-  <input id="buscar" placeholder="Buscar correo o ID" oninput="buscarUsuario()">
-  <div id="estado">Cargando usuarios...</div>
-  <div id="lista"></div>
+  <input id="buscar" placeholder="Buscar correo o ID">
+  <div id="lista">Cargando usuarios...</div>
 </div>
 
 <!-- 🔑 KEYS -->
-<div class="card">
+<div id="keys" class="page">
   <h2>🔑 KEYS</h2>
 
-  <label>Producto</label>
   <select id="producto">
-    <option>Cargando...</option>
+    <option>Cargando productos...</option>
   </select>
 
-  <label>Keys (1 por línea)</label>
-  <textarea id="keys"></textarea>
-
-  <button onclick="guardarKeys()">AGREGAR KEYS</button>
-  <div id="msg" class="msg"></div>
+  <textarea id="keysTxt" placeholder="1 key por línea"></textarea>
+  <button class="btn" onclick="guardarKeys()">AGREGAR KEYS</button>
+  <div id="msgKeys" class="msg"></div>
 </div>
 
-</div>
+<!-- 🔥 FIREBASE -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import {
+  getFirestore,
+  collection,
+  getDocs,
+  addDoc
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-<script>
-/* 🔥 FIREBASE CONFIG (EL TUYO, SIN TOCAR) */
+/* 🔴 TUS DATOS */
+const ADMIN_EMAIL = "admin@admin.com";
+const ADMIN_PASSWORD = "TU_PASSWORD";
+
 const firebaseConfig = {
-  apiKey: "AIzaSyAKrBTAkJGhB9s3E3MExqzj8mtXgKYsWRc",
-  authDomain: "davidstore-51f7f.firebaseapp.com",
-  projectId: "davidstore-51f7f"
+  apiKey: "TU_API_KEY",
+  authDomain: "TU_DOMINIO",
+  projectId: "TU_PROJECT_ID"
 };
 
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-/* ================= SALDOS ================= */
-const lista = document.getElementById("lista");
-const estado = document.getElementById("estado");
+/* 🔐 LOGIN ADMIN */
+signInWithEmailAndPassword(auth,ADMIN_EMAIL,ADMIN_PASSWORD)
+.then(()=>{
+  cargarUsuarios();
+  cargarProductos();
+})
+.catch(e=>alert("ERROR LOGIN: "+e.message));
 
-db.collection("login").onSnapshot(snap=>{
-  lista.innerHTML="";
-  estado.textContent = "Usuarios: " + snap.size;
-
+/* 📄 SALDOS */
+let usuariosCache=[];
+async function cargarUsuarios(){
+  const cont=document.getElementById("lista");
+  cont.innerHTML="";
+  const snap=await getDocs(collection(db,"usuarios"));
+  usuariosCache=[];
   snap.forEach(d=>{
-    const u=d.data();
-    lista.innerHTML+=`
-      <div class="user">
-        📧 <b>${u.email}</b><br>
-        💰 Saldo: <b>${u.saldo ?? 0}</b><br>
-        <small>${d.id}</small>
-        <div class="actions">
-          <input type="number" id="m_${d.id}" placeholder="Monto">
-          <button class="plus" onclick="cambiarSaldo('${d.id}',1)">+</button>
-          <button class="minus" onclick="cambiarSaldo('${d.id}',-1)">-</button>
-        </div>
-      </div>
-    `;
+    usuariosCache.push({id:d.id,...d.data()});
   });
-});
-
-function buscarUsuario(){
-  const t=buscar.value.toLowerCase();
-  document.querySelectorAll(".user").forEach(u=>{
-    u.style.display = u.innerText.toLowerCase().includes(t) ? "block":"none";
-  });
+  renderUsuarios(usuariosCache);
 }
 
-function cambiarSaldo(id,signo){
-  const m = Number(document.getElementById("m_"+id).value);
-  if(!m||m<=0) return;
-  db.collection("login").doc(id).update({
-    saldo: firebase.firestore.FieldValue.increment(m*signo)
-  });
-}
-
-/* ================= KEYS ================= */
-const sel=document.getElementById("producto");
-
-db.collection("claves").get().then(snap=>{
-  sel.innerHTML="<option value=''>Selecciona producto</option>";
-  if(snap.empty){
-    sel.innerHTML+="<option disabled>No hay productos</option>";
+function renderUsuarios(arr){
+  const cont=document.getElementById("lista");
+  cont.innerHTML="";
+  if(!arr.length){
+    cont.textContent="Sin usuarios";
+    return;
   }
-  snap.forEach(d=>{
-    const o=document.createElement("option");
-    o.value=d.id;
-    o.textContent=d.id;
-    sel.appendChild(o);
-  });
-});
-
-function guardarKeys(){
-  const prod=sel.value;
-  const texto=keys.value.trim();
-  const msg=document.getElementById("msg");
-
-  if(!prod){msg.textContent="Selecciona producto";msg.className="msg error";return;}
-  if(!texto){msg.textContent="Pega las keys";msg.className="msg error";return;}
-
-  const arr=texto.split("\n").map(x=>x.trim()).filter(x=>x);
-
-  db.collection("claves").doc(prod).update({
-    lista: firebase.firestore.FieldValue.arrayUnion(...arr)
-  }).then(()=>{
-    msg.textContent="Keys agregadas";
-    msg.className="msg ok";
-    keys.value="";
-  }).catch(()=>{
-    msg.textContent="Error al guardar";
-    msg.className="msg error";
+  arr.forEach(u=>{
+    cont.innerHTML+=`
+      <div class="user">
+        📧 ${u.email || u.id}<br>
+        💎 Saldo: <b>${u.saldo || 0}</b>
+      </div>`;
   });
 }
+
+document.getElementById("buscar").oninput=e=>{
+  const v=e.target.value.toLowerCase();
+  renderUsuarios(
+    usuariosCache.filter(u=>
+      (u.email||"").toLowerCase().includes(v) ||
+      u.id.toLowerCase().includes(v)
+    )
+  );
+};
+
+/* 🔑 PRODUCTOS */
+async function cargarProductos(){
+  const sel=document.getElementById("producto");
+  sel.innerHTML="<option value=''>Selecciona producto</option>";
+  const snap=await getDocs(collection(db,"productos"));
+  snap.forEach(d=>{
+    sel.innerHTML+=`<option value="${d.id}">${d.data().nombre||d.id}</option>`;
+  });
+}
+
+/* ➕ GUARDAR KEYS */
+window.guardarKeys = async()=>{
+  const prod=document.getElementById("producto").value;
+  const txt=document.getElementById("keysTxt").value.trim();
+  const msg=document.getElementById("msgKeys");
+
+  if(!prod||!txt){
+    msg.textContent="❌ Falta producto o keys";
+    msg.className="msg err";
+    return;
+  }
+
+  const arr=txt.split("\n").map(x=>x.trim()).filter(x=>x);
+
+  for(const k of arr){
+    await addDoc(collection(db,"claves"),{
+      producto:prod,
+      key:k,
+      usada:false,
+      fecha:Date.now()
+    });
+  }
+
+  msg.textContent="✅ Keys guardadas";
+  msg.className="msg ok";
+  document.getElementById("keysTxt").value="";
+};
+
+/* 🔁 CAMBIO DE PAGINA */
+window.show=id=>{
+  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+};
 </script>
 
 </body>
