--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <style>
+h3 { color:#f5c542; }
+h3 svg { filter: drop-shadow(0 0 6px #f5c542); }
+h3 { color:#f5c542; }
+h3 svg { filter: drop-shadow(0 0 6px #f5c542); }
+h2 {
+  color: #ff3b3b; /* rojo admin */
+}
 body{
   margin:0;
   font-family:Arial,Helvetica,sans-serif;
@@ -150,7 +157,16 @@ textarea{min-height:120px}
 
 <!-- 🔐 LOGIN -->
 <div id="loginBox" class="login">
-  <h2>🔐 LOGIN ADMIN</h2>
+<h2>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="26" height="26"
+       fill="none" stroke="currentColor" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round"
+       style="vertical-align: middle; margin-right:8px;">
+    <rect x="3" y="11" width="18" height="10" rx="2" ry="2"></rect>
+    <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+  </svg>
+  🔐 LOGIN ADMIN
+</h2>
   <input id="email" placeholder="Correo">
   <input id="pass" type="password" placeholder="Contraseña">
   <button onclick="login()">ENTRAR</button>
@@ -166,7 +182,18 @@ textarea{min-height:120px}
 
   <!-- 💰 SALDOS -->
   <div id="saldoBox" class="card">
-    <h3>💰 SALDOS</h3>
+    <h3>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+       width="24" height="24" fill="none"
+       stroke="currentColor" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round"
+       style="vertical-align: middle; margin-right:6px;">
+    <path d="M2 7h20v10H2z"/>
+    <path d="M16 12h4"/>
+    <circle cx="7" cy="12" r="2"/>
+  </svg>
+  SALDOS
+</h3>
     <input id="buscar" placeholder="Buscar correo o ID" oninput="buscarUsuario()">
     <div id="estado">Cargando usuarios...</div>
     <div id="lista"></div>
@@ -174,7 +201,19 @@ textarea{min-height:120px}
 
   <!-- 🔑 KEYS -->
   <div id="keysBox" class="card hidden">
-    <h3>🔑 KEYS</h3>
+    <h3>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+       width="24" height="24" fill="none"
+       stroke="currentColor" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round"
+       style="vertical-align: middle; margin-right:6px;">
+    <circle cx="7" cy="14" r="3"/>
+    <path d="M10 14h11"/>
+    <path d="M18 14v-2"/>
+    <path d="M21 14v-2"/>
+  </svg>
+  KEYS
+</h3>
     <label>Producto</label>
     <select id="producto"><option>Cargando...</option></select>
 
