--- a/index.html
+++ b/index.html
@@ -11,6 +11,59 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <style>
+.search-box {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 14px 18px;
+  margin: 16px 0;
+  border-radius: 16px;
+  background: #0e0e0e;
+  border: 1px solid #2a2a2a;
+}
+
+.search-box svg {
+  color: #f5c542;
+}
+
+.search-box input {
+  flex: 1;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 16px;
+}
+
+.search-box input::placeholder {
+  color: #888;
+}
+
+.search-box:focus-within {
+  border-color: #f5c542;
+  box-shadow: 0 0 12px rgba(245, 197, 66, 0.5);
+}
+button {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 10px 16px;
+  border-radius: 12px;
+  background: #111;
+  color: #fff;
+  border: 1px solid #333;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+button.active {
+  background: linear-gradient(135deg, #f5c542, #ff9f00);
+  color: #000;
+}
+
+button:hover {
+  box-shadow: 0 0 10px rgba(255, 196, 0, 0.6);
+}
 h3 { color:#f5c542; }
 h3 svg { filter: drop-shadow(0 0 6px #f5c542); }
 h3 { color:#f5c542; }
@@ -165,7 +218,7 @@ textarea{min-height:120px}
     <rect x="3" y="11" width="18" height="10" rx="2" ry="2"></rect>
     <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
   </svg>
-  🔐 LOGIN ADMIN
+  LOGIN ADMIN
 </h2>
   <input id="email" placeholder="Correo">
   <input id="pass" type="password" placeholder="Contraseña">
@@ -176,8 +229,31 @@ textarea{min-height:120px}
 <div id="panelBox" class="hidden">
 
   <div class="menu">
-    <button id="btnSaldo" class="active" onclick="verSaldo()">💰 SALDOS</button>
-    <button id="btnKeys" onclick="verKeys()">🔑 KEYS</button>
+    <button id="btnSaldo" class="active" onclick="verSaldo()">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+       width="20" height="20" fill="none"
+       stroke="currentColor" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round"
+       style="margin-right:6px;">
+    <path d="M2 7h20v10H2z"/>
+    <path d="M16 12h4"/>
+    <circle cx="7" cy="12" r="2"/>
+  </svg>
+  SALDOS
+</button>
+<button id="btnKeys" onclick="verKeys()">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+       width="20" height="20" fill="none"
+       stroke="currentColor" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round"
+       style="margin-right:6px;">
+    <circle cx="7" cy="14" r="3"/>
+    <path d="M10 14h11"/>
+    <path d="M18 14v-2"/>
+    <path d="M21 14v-2"/>
+  </svg>
+  KEYS
+</button>
   </div>
 
   <!-- 💰 SALDOS -->
@@ -194,7 +270,19 @@ textarea{min-height:120px}
   </svg>
   SALDOS
 </h3>
-    <input id="buscar" placeholder="Buscar correo o ID" oninput="buscarUsuario()">
+<div class="search-box">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+       width="22" height="22" fill="none"
+       stroke="currentColor" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round">
+    <circle cx="11" cy="11" r="8"/>
+    <path d="M21 21l-4.3-4.3"/>
+  </svg>
+
+  <input id="buscar"
+         placeholder="🔍 Buscar por correo o ID"
+         oninput="buscarUsuario()">
+</div>
     <div id="estado">Cargando usuarios...</div>
     <div id="lista"></div>
   </div>
